# prism

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
prism/: __init__.py  config.py  schemas.py
prism/api/: __init__.py  app.py  security.py
prism/evaluation/: __init__.py  metrics.py
prism/modules/: __init__.py  behavioral.py  personality.py  scoring.py  vision.py
tests/: test_pipeline.py
