[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Psychometric Recruitment Intelligence Scoring Model — multi-modal recruitment backend."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["prism", "prism.modules", "prism.api", "prism.evaluation"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function-call defaults (Depends/File) intentionally.

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
